finish addPaper/getPaperQuestion/login

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,15 +10,15 @@ spring:
   application:
     name: demo
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/zues?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://huangjingze.cn:3306/online_exam?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     username: root
-    password:
+    password: huang
     driver-class-name: com.mysql.jdbc.Driver
 
 ## mybatis配置
 mybatis:
   typeAliasesPackage: com.example.demo.dto
-  mapperLocations: classpath*:mapper/*.xml
+  mapperLocations: classpath*:mapping/*.xml
 
 
 
